feat: Implementar sistema de matriz AMFE modular con exportación Excel profesional
- Backend: Nuevos schemas y validación para estructura modular jerárquica
- Backend: Endpoints REST completos para matrices modulares (CRUD + export)
- Backend: Función export_modular_matrix_to_excel() con expansión inteligente de filas
- Backend: Validación automática (mínimo 1 proceso/subproceso/falla/causa/barrera/efecto)
- Backend: Cálculo automático de RPN (S  D  O)
- Backend: Formato Excel profesional del hospital (18 columnas, 4 filas metadata, headers dobles)
- Backend: Merge vertical automático de proceso/subproceso/falla según contenido
- Backend: Color coding para RPN y procesos personalizables

- Frontend: Nuevo componente MatrixFormModular.js (927 líneas) con interfaz jerárquica
- Frontend: Botones [+][-] para agregar/eliminar elementos en cada nivel
- Frontend: 8 tipos de elementos configurables (efectos, causas, barreras, acciones, etc)
- Frontend: Color picker para personalizar procesos
- Frontend: Validación en tiempo real y cálculo automático de RPN
- Frontend: Detección inteligente de tipo de matriz (modular vs Handsontable)
- Frontend: Botones diferenciados en MatrixList (verde=Modular, azul=Handsontable)
- Frontend: Redirección automática al editor correcto según tipo
- Frontend: Descarga de Excel usando endpoint correcto según tipo

- Docs: Arquitectura modular completa documentada
- Docs: Estructura del proyecto organizada en carpeta docs/
- Docs: README profesional actualizado
- Docs: ESTRUCTURA_PROYECTO.md como guía visual

- Fixes: Campo nombre de proceso ahora claramente editable (borde punteado)
- Fixes: Detección de tipo de matriz para edición y descarga
- Fixes: Logs de debug para troubleshooting de exportación

Resolves: Problema de matriz plana en Excel
Closes: Solicitud de sistema modular jerárquico

--- a/amfe-matrix-fastapi/frontend/package.json
+++ b/amfe-matrix-fastapi/frontend/package.json
@@ -9,7 +9,9 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@handsontable/react": "^16.1.1",
     "axios": "^0.21.1",
+    "handsontable": "^16.1.1",
     "node-libs-browser": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
