--- a/amfe-matrix-fastapi/docker-compose.yml
+++ b/amfe-matrix-fastapi/docker-compose.yml
@@ -40,7 +40,7 @@ services:
       - ./frontend:/frontend
     environment:
       - CHOKIDAR_USEPOLLING=true
-      - REACT_APP_API_URL=http://localhost:5000
+      - REACT_APP_API_URL=http://192.168.1.53:5000
       - NODE_OPTIONS=--openssl-legacy-provider
     depends_on:
       - backend
