Mejoras UI/UX y Excel: selectores, colores RPN, logo y fechas
- Mejora estética de selectores de evaluación (severidad, detectabilidad, ocurrencia):
  * Cambiados inputs numéricos a elementos select (dropdown)
  * Agregada flecha personalizada SVG
  * Estilos mejorados con bordes gruesos, padding aumentado
  * Efectos hover y focus con sombras suaves
  * Previene entrada de valores fuera del rango 1-5

- Sistema de colores RPN simplificado a 3 niveles:
  * Alto (Rojo): RPN 80-125
  * Medio (Naranja): RPN 40-79
  * Bajo (Verde): RPN 1-39
  * Aplicado tanto en interfaz web como en archivo Excel

- Colores Excel mejorados:
  * Columna J (RPN): Fondo de color + texto blanco en negrita
  * Columna K (Tipo de Riesgo): Fondos claros con textos contrastantes
  * Consistencia completa entre web y Excel

- Logo Club Noel agregado al Excel:
  * Logo insertado en celda A1 del archivo Excel
  * Tamaño ajustado: 80x60px
  * Altura de fila aumentada para mejor visualización
  * Incluye Pillow en dependencias para procesamiento de imágenes

- Corrección de fechas en Excel:
  * Fila 4 ahora muestra valores de DÍA, MES y AÑO parseados
  * Formato correcto desde fechaEmision (YYYY-MM-DD)

- Numeración secuencial en tabla de matrices:
  * ID ahora muestra posición en lista (#1, #2, #3...)
  * Más intuitivo que ID de base de datos

Archivos modificados:
- frontend/src/components/Matrices/MatrixFormModular.css
- frontend/src/components/Matrices/MatrixList.js
- frontend/src/index.css
- backend/app/services/matrix_service.py
- backend/requirements.txt (agregado Pillow)
- backend/Dockerfile (copia carpeta assets)

Archivos nuevos:
- backend/assets/club.jpg (logo para Excel)

--- a/amfe-matrix-fastapi/backend/Dockerfile
+++ b/amfe-matrix-fastapi/backend/Dockerfile
@@ -12,6 +12,9 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy the application code
 COPY ./app ./app
 
+# Copy assets folder (logo, etc.)
+COPY ./assets ./assets
+
 # Expose the port FastAPI runs on
 EXPOSE 8000
 
